--- a/themes/vue/layout/index.ejs
+++ b/themes/vue/layout/index.ejs
@@ -1,19 +1,19 @@
 <div id="hero">
   <div class="inner">
     <ul id="nav">
-      <li><a href="/guide/" class="nav-link">Guide</a></li>
+      <li><a href="/guide/" class="nav-link">教程</a></li>
       <li><a href="/api/" class="nav-link">API</a></li>
-      <li><a href="/examples/" class="nav-link">Examples</a></li>
-      <li><a href="/blog" class="nav-link">Blog</a></li>
+      <li><a href="/examples/" class="nav-link">示例</a></li>
+      <li><a href="/blog" class="nav-link">博客</a></li>
       <%- partial('partials/community_dropdown') %>
     </ul>
     <div id="logo-wrap">
       <img id="logo" src="/images/logo.png">
       <h1>Vue.js</h1>
     </div>
-    <p class="desc">Reactive Components for Modern Web Interfaces</p>
+    <p class="desc">数据驱动的组件，专为现代 Web 界面</p>
     <p class="buttons">
-      <a href="/guide/installation.html" class="button">Install v<%- theme.vue_version %></a>
+      <a href="/guide/installation.html" class="button">安装 v<%- theme.vue_version %></a>
     </p>
     <ul id="social">
       <li><a href="https://twitter.com/vuejs" class="twitter-follow-button" data-show-count="false" data-dnt="true">Follow @vuejs</a></li>
@@ -21,7 +21,7 @@
     allowtransparency="true" frameborder="0" scrolling="0" width="100" height="20"></iframe></li>
     </ul>
     <ul id="translations">
-      <li><a href="http://cn.vuejs.org" class="nav-link wip">中文</a></li>
+      <li><a href="http://vuejs.org" class="nav-link">English</a></li>
       <li class="delimiter">|</li>
       <li><a href="http://jp.vuejs.org" class="nav-link">日本語</a></li>
     </ul>
@@ -30,7 +30,7 @@
 </div>
 
 <div id="example">
-  <h2>10 Second Example</h2>
+  <h2>10 秒钟看懂 Vue.js</h2>
   <div class="block">
     <figure class="highlight lang-html"><table><tbody><tr><td class="gutter"><pre>1
 2
@@ -81,44 +81,44 @@
 <div id="features">
   <div class="feats">
     <div class="feat">
-      <h2><span class="icon simple"></span>Simple</h2>
-      <p>Write some HTML, grab some JSON, create a Vue instance, that's it.</p>
+      <h2><span class="icon simple"></span>简洁</h2>
+      <p>HTML 模板 + JSON 数据，再创建一个 Vue 实例，就这么简单。</p>
     </div>
     <div class="feat">
-      <h2><span class="icon powerful"></span>Reactive</h2>
-      <p>Expressions & computed properties with transparent dependency tracking.</p>
+      <h2><span class="icon powerful"></span>数据驱动</h2>
+      <p>自动追踪依赖的模板表达式和计算属性。</p>
     </div>
     <div class="feat">
-      <h2><span class="icon composable"></span>Components</h2>
-      <p>Compose your application with decoupled, reusable components.</p>
+      <h2><span class="icon composable"></span>组件化</h2>
+      <p>用解耦、可复用的组件来构造界面。</p>
     </div>
     <div class="feat">
-      <h2><span class="icon compact"></span>Compact</h2>
-      <p>~23kb min+gzip, no dependency.</p>
+      <h2><span class="icon compact"></span>轻量</h2>
+      <p>~23kb min+gzip，无依赖。</p>
     </div>
     <div class="feat">
-      <h2><span class="icon fast"></span>Fast</h2>
-      <p>Precise and efficient async batch DOM updates.</p>
+      <h2><span class="icon fast"></span>快速</h2>
+      <p>精确有效的异步批量 DOM 更新。</p>
     </div>
     <div class="feat">
-      <h2><span class="icon module"></span>Package Ready</h2>
-      <p>Install via NPM or Bower - leverage your favorite eco system!</p>
+      <h2><span class="icon module"></span>模块友好</h2>
+      <p>通过 NPM 或 Bower 安装，无缝融入你的工作流。</p>
     </div>
   </div>
 </div>
 <div id="why">
-  <h2>You should try it out if you like:</h2>
+  <h2>如果你喜欢下面这些，那你一定会喜欢 Vue.js：</h2>
   <ul>
-    <li>Extendable Data bindings</li>
-    <li>Plain JS object models</li>
-    <li>API that simply makes sense</li>
-    <li>Build UI by composing components</li>
-    <li>Mix &amp; matching small libraries</li>
+    <li>可扩展的数据绑定机制</li>
+    <li>原生对象即模型</li>
+    <li>简洁明了的 API</li>
+    <li>B组件化 UI 构建</li>
+    <li>多个轻量库搭配使用</li>
   </ul>
 </div>
 <div id="footer">
-  <a class="start" href="/guide/index.html">Get Started</a>
-  <p>Released under the <a href="http://opensource.org/licenses/MIT" target="_blank">MIT License</a></p>
+  <a class="start" href="/guide/index.html">立刻上手</a>
+  <p>以 <a href="http://opensource.org/licenses/MIT" target="_blank">MIT 许可证</a>发布</p>
   <p>Copyright (c) <%- date(Date.now(), 'YYYY') %> <a href="http://evanyou.me" target="_blank">Evan You</a></p>
 </div>
 
