--- a/themes/vue/layout/page.ejs
+++ b/themes/vue/layout/page.ejs
@@ -17,5 +17,5 @@
         <% }) %>
       </div>
     <% } %>
-    <div class="footer">Caught a mistake or want to contribute to the documentation? <a href="https://github.com/vuejs/vuejs.org" target="_blank">Fork this site on Github</a>!</div>
+    <div class="footer">发现错误？想参与编辑？<a href="https://github.com/vuejs/cn.vuejs.org" target="_blank">来 Github 上 fork 此站点！</a></div>
 </div>
