--- a/themes/vue/layout/index.ejs
+++ b/themes/vue/layout/index.ejs
@@ -11,7 +11,7 @@
       <img id="logo" src="/images/logo.png">
       <h1>Vue.js</h1>
     </div>
-    <p class="desc">数据驱动的组件，专为现代 Web 界面</p>
+    <p class="desc">数据驱动的组件，为现代化的 Web 界面而生</p>
     <p class="buttons">
       <a href="/guide/installation.html" class="button">安装 v<%- theme.vue_version %></a>
     </p>
