--- a/themes/vue/layout/index.ejs
+++ b/themes/vue/layout/index.ejs
@@ -118,7 +118,7 @@
     <li>可扩展的数据绑定机制</li>
     <li>原生对象即模型</li>
     <li>简洁明了的 API</li>
-    <li>B组件化 UI 构建</li>
+    <li>组件化 UI 构建</li>
     <li>多个轻量库搭配使用</li>
   </ul>
 </div>
