--- a/themes/vue/layout/partials/sidebar.ejs
+++ b/themes/vue/layout/partials/sidebar.ejs
@@ -19,9 +19,9 @@
             <% }) %>
         </ul>
         <div id="donate">
-            <span class="wrapper" style="width: 110px">
-              <img src="/images/paypal.png">
-              <a href="https://www.paypal.me/evanyou" target="_blank">Buy Me Coffee</a>
+            <span class="wrapper" style="width: 72px">
+              <img src="/images/weixinpay.png">
+              <a>打个赏</a>
             </span>
         </div>
     </div>
