--- a/themes/vue/layout/index.ejs
+++ b/themes/vue/layout/index.ejs
@@ -21,8 +21,8 @@
     allowtransparency="true" frameborder="0" scrolling="0" width="100" height="20"></iframe></li>
       <li id="donate">
         <span class="wrapper">
-          <img src="/images/paypal.png">
-          <a href="https://www.paypal.me/evanyou" target="_blank">Donate</a>
+          <img src="/images/weixinpay.png">
+          <a>打个赏</a>
         </span>
       </li>
     </ul>
