--- a/themes/vue/layout/index.ejs
+++ b/themes/vue/layout/index.ejs
@@ -20,9 +20,9 @@
       <li><iframe src="//ghbtns.com/github-btn.html?user=vuejs&repo=vue&type=watch&count=true"
     allowtransparency="true" frameborder="0" scrolling="0" width="100" height="20"></iframe></li>
       <li id="donate">
-        <span class="wrapper">
-          <img src="/images/weixinpay.png">
-          <a>打个赏</a>
+        <span class="wrapper" style="width: 108px">
+          <img src="/images/patreon.png">
+          <a href="/support-vuejs">支持 Vue.js</a>
         </span>
       </li>
     </ul>
