To follow Master yyx's instruction

--- a/themes/vue/source/css/_common.styl
+++ b/themes/vue/source/css/_common.styl
@@ -131,18 +131,17 @@ a.button
     //     font-weight normal
 
 #nav
-    li
-        min-width 3em
     .nav-link
         cursor pointer
     .nav-dropdown-container
-        width 5em
         .nav-link
             &:hover
                 border-bottom none
         &:hover
             .nav-dropdown
                 display block
+        li
+            white-space: nowrap
     .nav-dropdown
         display none
         position absolute
