--- a/themes/vue/source/css/_common.styl
+++ b/themes/vue/source/css/_common.styl
@@ -155,6 +155,7 @@ a.button
             line-height 1.8em
             margin 0
             display block
+            white-space nowrap
         a
             color $light
             font-size .9em
@@ -206,7 +207,7 @@ a.button
             left 26px
 
 #qrcode
-    display none    
+    display none
     position fixed
     z-index 9999
     width 300px
