改善中文版导航栏布局 (#105)
* Fix #104 Improve the layout of navbar of lang-zh website

改善中文版导航栏布局

* To follow Master yyx's instruction

* atom complains about that the line ending is mixed instead of LF-only

--- a/themes/vue/source/css/_common.styl
+++ b/themes/vue/source/css/_common.styl
@@ -140,11 +140,13 @@ a.button
         &:hover
             .nav-dropdown
                 display block
+        li
+            white-space: nowrap
     .nav-dropdown
         display none
         position absolute
         top 100%
-        left 0
+        left -30%
         background-color #fff
         padding 10px 0
         border 1px solid #ddd
