--- a/themes/vue/layout/partials/sidebar.ejs
+++ b/themes/vue/layout/partials/sidebar.ejs
@@ -5,9 +5,9 @@
     <div class="list">
         <div class="main-sponsor">
             <span>赞助者</span><br>
-            <a href="http://www.thedifferenceengine.io/" target="_blank"
-                style="background-color: #f3f3f3; padding: 10px 0">
-                <img src="/images/tde.png">
+            <a href="https://www.upyun.com/?utm_source=vue&utm_medium=ad&utm_content=con
+" target="_blank">
+                <img src="/images/upyun-main.jpg">
             </a>
         </div>
         <a class="become-backer" href="/support-vuejs">
