--- a/themes/vue/layout/layout.ejs
+++ b/themes/vue/layout/layout.ejs
@@ -1,6 +1,6 @@
 <% var isIndex = page.path === 'index.html' %>
 <!DOCTYPE html>
-<html lang="en">
+<html lang="zh-CN">
     <head>
         <title><%- page.title ? page.title + ' - ' : '' %>Vue.js</title>
         <meta charset="utf-8">
