--- a/themes/vue/layout/index.ejs
+++ b/themes/vue/layout/index.ejs
@@ -7,14 +7,14 @@
 <div id="hero">
   <div class="inner">
     <div class="left">
-      <img class="hero-logo" src="/images/logo.png">
+      <img class="hero-logo" src="<%- url_for("/images/logo.png") %>">
     </div><div class="right">
       <h2 class="vue">Vue.js</h2>
       <h1>
         渐进式<br>JavaScript 框架
       </h1>
       <p>
-        <a class="button" href="/v2/guide/">起步</a>
+        <a class="button" href="<%- url_for("/v2/guide/") %>">起步</a>
         <a class="button white" href="https://github.com/vuejs/vue" target="_blank">GITHUB</a>
       </p>
     </div>
@@ -23,8 +23,6 @@
 
 <div id="highlights">
   <div class="inner">
-
-
     <div class="point">
       <h2>易用</h2>
       <p>已经会了HTML,CSS,JavaScript？即刻阅读指南开始构建应用！</p>
@@ -33,7 +31,7 @@
     <div class="point">
       <h2>灵活</h2>
       <p>简单小巧的核心，渐进式技术栈，足以应付任何规模的应用。</p>
-    </div>    
+    </div>
 
     <div class="point">
       <h2>性能</h2>
@@ -51,13 +49,13 @@
     <h3>赞助者</h3>
     <%- partial('partials/sponsors') %>
     <br>
-    <a class="become-sponsor button white" href="/support-vuejs/">成为赞助者</a>
+    <a class="become-sponsor button white" href="<%- url_for("/support-vuejs/") %>">成为赞助者</a>
   </div>
 </div>
 
 <div id="footer">
-  遵循 <a href="https://opensource.org/licenses/MIT" href="_blank">MIT 开源协议</a><br>
-  Copyright &copy; 2014-<%- new Date().getFullYear() %> Evan You
+  <p>遵循 <a href="https://opensource.org/licenses/MIT" target="_blank">MIT 开源协议</a><br>
+  Copyright &copy; 2014-<%- new Date().getFullYear() %> Evan You</p>
 </div>
 
 <script>
