Synced CSS and fonts.

--- a/themes/vue/source/css/_fonts.styl
+++ b/themes/vue/source/css/_fonts.styl
@@ -19,3 +19,9 @@
   font-family "Roboto Mono"
   src local("Roboto Mono"),
       url(/fonts/Roboto_Mono/RobotoMono-Regular.ttf)
+
+@font-face
+  font-family "Dosis"
+  src local("Dosis Medium"), local("Dosis-Medium"),
+      url(/fonts/Roboto_Mono/Dosis-Medium.ttf)
+  font-weight 500
