--- a/themes/vue/source/css/_common.styl
+++ b/themes/vue/source/css/_common.styl
@@ -20,6 +20,7 @@ body
 a
     text-decoration none
     color $medium
+
 img
     border none
 
@@ -59,6 +60,7 @@ a.button
     &.white
         background-color #fff
         color $green
+
 .highlight
     overflow-x auto
     position relative
@@ -157,7 +159,7 @@ a.button
         display none
         box-sizing border-box
         max-height "calc(100vh - %s)" % $header-height
-        overflow-y scroll
+        overflow-y auto
         position absolute
         top 100%
         right -15px
