--- a/themes/vue/source/css/page.styl
+++ b/themes/vue/source/css/page.styl
@@ -4,6 +4,7 @@
 @import "_sponsor"
 @import "_migration"
 @import "_sidebar"
+@import "_offline-menu"
 
 #header
     box-shadow 0 0 1px rgba(0,0,0,.25)
@@ -12,7 +13,7 @@
 .content
     position relative
     padding 2.2em 0
-    max-width 800px
+    max-width 600px
     margin 0 auto
     &.api
         > a:first-of-type > h2
@@ -21,8 +22,9 @@
         ul
             padding-left 1.25em
             line-height 1.4em
-            ul, p
-                margin .6em 0
+            ul, p:not(.tip)
+                padding-bottom 0
+                margin 1.2em 0
     a.button
         font-size .9em
         color #fff
@@ -81,9 +83,11 @@
         z-index: 1
     ul, ol
         padding-left 1.5em
+        // FIX: Some link click targets are covered without this
+        position inherit
     a
         color $green
-        font-weight 400
+        font-weight 600
     blockquote
         margin 2em 0
         padding-left 20px
@@ -91,25 +95,27 @@
         p
             font-weight 600
             margin-left 0
+            margin-bottom 0
+            padding-bottom 0
     iframe
         margin 1em 0
     > table
-        border 2px solid $white
+        border-spacing 0
+        border-collapse collapse
         margin 1.2em auto
-        padding: 1em
+        padding 0
+        display block
+        overflow-x auto
         td, th
-            line-height 1.6em
-            padding .5em 1.4em
+            line-height 1.5em
+            padding .4em .8em
             border none
-        td
-            background-color: lighten($codebg, 60%)
+            border 1px solid #ddd
         th
-            background-color: $green
-            color: #fff
-            padding-top: .85em
-            padding-bottom .85em
+            font-weight bold
             text-align left
-        tbody
+        th, tr:nth-child(2n)
+            background-color #f8f8f8
             code
                 background-color #efefef
     p.tip
@@ -162,9 +168,9 @@
     #header
         background-color rgba(255,255,255,.4)
 
-@media screen and (max-width: 1500px)
+@media screen and (max-width: 1300px)
     .content.with-sidebar
-        margin-left 280px
+        margin-left 290px
     #ad
         z-index 7
         position relative
