Update shop translation in main menu.

--- a/themes/vue/layout/partials/main_menu.ejs
+++ b/themes/vue/layout/partials/main_menu.ejs
@@ -9,6 +9,6 @@
 <%- partial('partials/ecosystem_dropdown') %>
 <%- partial('partials/language_dropdown') %>
 <li>
-  <a href="https://vue.threadless.com" target="_blank" class="nav-link shop">Shop</a>
+  <a href="https://vue.threadless.com" target="_blank" class="nav-link shop">商店</a>
 </li>
 <li><a href="<%- url_for("/about/") %>" class="nav-link<%- page.path.match(/about/) ? ' current' : '' %>">参与贡献</a></li>
