Make the button style better in Chinese characters.

--- a/themes/vue/source/css/_common.styl
+++ b/themes/vue/source/css/_common.styl
@@ -50,6 +50,8 @@ p
 
 a.button
     padding 0.75em 2em
+    min-width 8em
+    text-align center
     border-radius 2em
     display inline-block
     color #fff
