--- a/themes/vue/layout/partials/sidebar.ejs
+++ b/themes/vue/layout/partials/sidebar.ejs
@@ -5,8 +5,8 @@
     <div class="list">
         <div class="main-sponsor">
             <span>赞助者</span><br>
-            <a href="https://www.upyun.com/league?utm_source=vue&utm_medium=ad&utm_content=con" target="_blank">
-                <img src="/images/upyun-main-4.jpg">
+            <a href="https://console.upyun.com/register/?invite=H124C2iMZ&utm_source=vue&utm_medium=ad&utm_content=con" target="_blank">
+                <img src="/images/upyun-main.png">
             </a>
         </div>
         <a class="become-backer" href="<%- url_for("/support-vuejs") %>">
