--- a/themes/vue/layout/partials/contributors.ejs
+++ b/themes/vue/layout/partials/contributors.ejs
@@ -1,6 +1,7 @@
 <div id="contributors">
 <a href="https://github.com/vuejs/cn.vuejs.org/graphs/contributors">cn.vuejs.org 贡献者</a>
 <p>共 <span style="color:#e66;font-size:28px;" v-text="list.length "></span> 人参与贡献，排名不分先后，<a href="https://github.com/vuefe/vuefe.github.io/issues/192">如有遗漏，请告知</a></p>
+<p>目前文档已经进入维护阶段，社区最新的文档/翻译贡献情况可以参阅 GitHub 提供的 <a href="https://github.com/vuejs/cn.vuejs.org/graphs/contributors" target="_blank">contributors</a> 页面。</p>
 <ul class="contributors">
   <a v-for="item in list"
     class="contributor"
