--- a/themes/vue/layout/partials/sidebar.ejs
+++ b/themes/vue/layout/partials/sidebar.ejs
@@ -1,26 +1,28 @@
 <div class="sidebar">
-    <ul class="main-menu">
-        <%- partial('partials/main_menu', { context: 'sidebar' }) %>
-    </ul>
-    <div class="list">
-        <div class="main-sponsor">
-            <span>赞助者</span><br>
-            <a href="https://console.upyun.com/register/?invite=H124C2iMZ&utm_source=vue&utm_medium=ad&utm_content=con" target="_blank">
-                <img src="/images/upyun-main.png">
+    <div class="sidebar-inner">
+        <ul class="main-menu">
+            <%- partial('partials/main_menu', { context: 'sidebar' }) %>
+        </ul>
+        <div class="list">
+            <div class="main-sponsor">
+                <span>赞助者</span><br>
+                <a href="https://console.upyun.com/register/?invite=H124C2iMZ&utm_source=vue&utm_medium=ad&utm_content=con" target="_blank">
+                    <img src="/images/upyun-main.png">
+                </a>
+            </div>
+            <a class="become-backer" href="<%- url_for("/support-vuejs") %>">
+                Become a Sponsor
             </a>
+            <h2>
+                <% titles = {api: 'API', examples: '示例', guide: '教程'} %>
+                <% if (type !== 'cookbook') { %>
+                    <select class="version-select">
+                        <option value="SELF" selected>2.x</option>
+                        <option value="v1">1.0</option>
+                    </select>
+                <% } %>
+            </h2>
+            <%- partial('partials/toc', { type: type }) %>
         </div>
-        <a class="become-backer" href="<%- url_for("/support-vuejs") %>">
-            Become a Sponsor
-        </a>
-        <h2>
-            <% titles = {api: 'API', examples: '示例', guide: '教程'} %>
-            <% if (type !== 'cookbook') { %>
-                <select class="version-select">
-                    <option value="SELF" selected>2.x</option>
-                    <option value="v1">1.0</option>
-                </select>
-            <% } %>
-        </h2>
-        <%- partial('partials/toc', { type: type }) %>
     </div>
 </div>
