--- a/themes/vue/source/css/_fonts.styl
+++ b/themes/vue/source/css/_fonts.styl
@@ -1,6 +1,6 @@
 @font-face
   font-family: "Source Sans Pro"
-  src:: local("Source Sans Pro"), url(/fonts/Source_Sans_Pro/SourceSansPro-Regular.ttf)
+  src: local("Source Sans Pro"), url(/fonts/Source_Sans_Pro/SourceSansPro-Regular.ttf)
 
 @font-face
   font-family: "Source Sans Pro"
