--- a/themes/vue/layout/partials/ecosystem_dropdown.ejs
+++ b/themes/vue/layout/partials/ecosystem_dropdown.ejs
@@ -3,8 +3,8 @@
   <ul class="nav-dropdown">
     <li><h4>帮助</h4></li>
     <li><ul>
-      <li><a href="http://forum.vuejs.org" class="nav-link" target="_blank">论坛</a></li>
-      <li><a href="https://gitter.im/vuejs/vue" class="nav-link" target="_blank">聊天室</a></li>
+      <li><a href="http://forum.vuejs.org/" class="nav-link" target="_blank">论坛</a></li>
+      <li><a href="https://chat.vuejs.org/" class="nav-link" target="_blank">聊天室</a></li>
       <li><a href="https://github.com/vuejs-templates" class="nav-link" target="_blank">模板</a></li>
     </ul></li>
     <li><h4>信息</h4></li>
@@ -21,6 +21,7 @@
     <li><h4>资源列表</h4></li>
     <li><ul>
       <li><a href="https://github.com/vuejs" class="nav-link" target="_blank">官方仓库</a></li>
+      <li><a href="https://curated.vuejs.org/" class="nav-link" target="_blank">Vue 优选</a></li>
       <li><a href="https://github.com/vuejs/awesome-vue" class="nav-link" target="_blank">Vue 资源</a></li>
     </ul></li>
   </ul>
