--- a/themes/vue/layout/partials/sidebar.ejs
+++ b/themes/vue/layout/partials/sidebar.ejs
@@ -6,8 +6,8 @@
         <div class="list">
             <div class="main-sponsor">
                 <span>赞助者</span><br>
-                <a href="https://cn.100offer.com/how-it-works/?utm_source=vuejs&utm_medium=display&utm_campaign=vuejs_20170704&utm_content=find_new_job&campaign_code=vuejs" target="_blank">
-                    <img src="/images/100offer-main.png">
+                <a href="https://xiaozhuanlan.com/" target="_blank" style="display: block; margin: 6px 0">
+                    <img src="/images/xiaozhuanlan-sidebar.png" style="border-radius: 3px">
                 </a>
             </div>
             <a class="become-backer" href="<%- url_for("/support-vuejs") %>">
