--- a/themes/vue/layout/partials/sponsors.ejs
+++ b/themes/vue/layout/partials/sponsors.ejs
@@ -1,5 +1,5 @@
-<a href="https://www.upyun.com/?utm_source=vue&utm_medium=ad&utm_content=index" target="_blank" style="width:160px">
-  <img src="<%- url_for("/images/upyun-large.png") %>" style="width:160px">
+<a href="https://xiaozhuanlan.com/" target="_blank" style="width:160px">
+  <img src="<%- url_for("/images/xiaozhuanlan.png") %>" style="width:160px">
 </a>
 <br>
 <a href="https://stdlib.com/" target="_blank">
