--- a/themes/vue/layout/partials/contributors.ejs
+++ b/themes/vue/layout/partials/contributors.ejs
@@ -1,7 +1,10 @@
 <div id="contributors">
-<a href="https://github.com/vuejs/cn.vuejs.org/graphs/contributors">cn.vuejs.org 贡献者</a>
-<p>共 <span style="color:#e66;font-size:28px;" v-text="list.length "></span> 人参与贡献，排名不分先后，<a href="https://github.com/vuefe/vuefe.github.io/issues/192">如有遗漏，请告知</a></p>
+<p>Vue 2.0 文档的早期翻译由 <a href="https://github.com/vuefe/vuejs.org" target="_blank">vuefe</a> 社区发起并组织完成。在此对 vuefe 表示非常感谢！</p>
 <p>目前文档已经进入维护阶段，社区最新的文档/翻译贡献情况可以参阅 GitHub 提供的 <a href="https://github.com/vuejs/cn.vuejs.org/graphs/contributors" target="_blank">contributors</a> 页面。</p>
+<p>大家可以在 Vue 中文网站的<a href="https://github.com/vuejs/cn.vuejs.org/" target="_blank">官方仓库</a>继续参与贡献。</p>
+<p>以下是在 vuefe 参与翻译的贡献者列表。该列表已不再更新。</p>
+<hr>
+<p>共 <span style="color:#e66;font-size:28px;" v-text="list.length "></span> 人参与贡献，排名不分先后</p>
 <ul class="contributors">
   <a v-for="item in list"
     class="contributor"
