--- a/themes/vue/layout/partials/ecosystem_dropdown.ejs
+++ b/themes/vue/layout/partials/ecosystem_dropdown.ejs
@@ -3,7 +3,7 @@
   <ul class="nav-dropdown">
     <li><h4>帮助</h4></li>
     <li><ul>
-      <li><a href="http://forum.vuejs.org/" class="nav-link" target="_blank">论坛</a></li>
+      <li><a href="https://forum.vuejs.org/" class="nav-link" target="_blank">论坛</a></li>
       <li><a href="https://chat.vuejs.org/" class="nav-link" target="_blank">聊天室</a></li>
       <li><a href="https://github.com/vuejs-templates" class="nav-link" target="_blank">模板</a></li>
     </ul></li>
