Synced updates these days (#3990ea1).

--- a/themes/vue/layout/partials/toc.ejs
+++ b/themes/vue/layout/partials/toc.ejs
@@ -17,6 +17,9 @@
             <% if (fileName === 'routing') { %>
                 <li><h3>规模化</h3></li>
             <% } %>
+            <% if (fileName === 'reactivity') { %>
+                <li><h3>内在</h3></li>
+            <% } %>
             <% if (fileName === 'migration') { %>
                 <li><h3>迁移</h3></li>
             <% } %>
