--- a/themes/vue/layout/index.ejs
+++ b/themes/vue/layout/index.ejs
@@ -27,7 +27,7 @@
   <div class="inner">
     <div class="point">
       <h2>易用</h2>
-      <p>已经会了HTML,CSS,JavaScript？即刻阅读指南开始构建应用！</p>
+      <p>已经会了 HTML、CSS、JavaScript？即刻阅读指南开始构建应用！</p>
     </div>
 
     <div class="point">
