Synced updates these days (#48a3f59).

--- a/themes/vue/layout/page.ejs
+++ b/themes/vue/layout/page.ejs
@@ -36,6 +36,7 @@
       </div>
     <% } %>
     <div class="footer">
+      <%- partial('partials/ad-text') %>
       发现错误？想参与编辑？
       <a href="https://github.com/vuejs/cn.vuejs.org/blob/master/src/<%- page.path.replace(/\.html$/, '.md') %>" target="_blank">
         在 Github 上编辑此页！
