--- a/themes/vue/layout/index.ejs
+++ b/themes/vue/layout/index.ejs
@@ -32,7 +32,7 @@
 
     <div class="point">
       <h2>灵活</h2>
-      <p>简单小巧的核心，渐进式技术栈，足以应付任何规模的应用。</p>
+      <p>不断繁荣的生态系统，可以在一个库和一套完整框架之间自如伸缩。</p>
     </div>
 
     <div class="point">
@@ -48,10 +48,7 @@
 
 <div id="sponsors">
   <div class="inner">
-    <h3>赞助者</h3>
     <%- partial('partials/sponsors') %>
-    <br>
-    <a class="become-sponsor button white" href="<%- url_for("/support-vuejs/") %>">成为赞助者</a>
   </div>
 </div>
 
@@ -64,14 +61,35 @@
 </div>
 
 <script>
-var topScrolled = false
-window.addEventListener('scroll', function () {
-  if (window.pageYOffset > 165 && !topScrolled) {
-    topScrolled = true
-    document.getElementById('mobile-bar').classList.remove('top')
-  } else if (window.pageYOffset <= 165 && topScrolled) {
-    topScrolled = false
-    document.getElementById('mobile-bar').classList.add('top')
-  }
-})
+(function () {
+  var topScrolled = false
+  var sponsors = document.getElementById('sponsors')
+  var sponsorTop = sponsors.offsetTop
+  var sponsorActive = false
+
+  window.addEventListener('resize', function () {
+    sponsorTop = sponsors.offsetTop
+  })
+
+  window.addEventListener('scroll', function () {
+    if (window.pageYOffset > 165 && !topScrolled) {
+      topScrolled = true
+      document.getElementById('mobile-bar').classList.remove('top')
+    } else if (window.pageYOffset <= 165 && topScrolled) {
+      topScrolled = false
+      document.getElementById('mobile-bar').classList.add('top')
+    }
+    if (window.pageYOffset > sponsorTop - 100) {
+      if (!sponsorActive) {
+        sponsorActive = true
+        sponsors.classList.add('active')
+      }
+    } else {
+      if (sponsorActive) {
+        sponsorActive = false
+        sponsors.classList.remove('active')
+      }
+    }
+  })
+})()
 </script>
