Changed all single quotes in stylus to double quotes.

--- a/themes/vue/source/css/index.styl
+++ b/themes/vue/source/css/index.styl
@@ -1,7 +1,7 @@
 @import "_common"
 @import "_header"
-@import '_sidebar'
-@import '_sponsor'
+@import "_sidebar"
+@import "_sponsor"
 
 $width = 900px
 $space = 50px
