Fixed inline style format.

--- a/themes/vue/layout/partials/sidebar.ejs
+++ b/themes/vue/layout/partials/sidebar.ejs
@@ -6,8 +6,8 @@
     <div class="list">
       <div class="main-sponsor">
         <span>赞助者</span><br>
-        <a id="main-sponsor-link" target="_blank" style="display: block; margin: 6px 0">
-          <img id="main-sponsor-image" style="border-radius: 3px">
+        <a id="main-sponsor-link" target="_blank" style="display: block; margin: 6px 0;">
+          <img id="main-sponsor-image" style="border-radius: 3px;">
         </a>
         <script>
         (function () {
