--- a/themes/vue/layout/partials/sponsors.ejs
+++ b/themes/vue/layout/partials/sponsors.ejs
@@ -47,6 +47,9 @@
 <a href="https://www.xfive.co/" target="_blank" style="width: 65px;">
   <img src="<%- url_for("/images/xfive.png") %>" style="width: 65px;">
 </a>
+<a href="http://www.frontenddevelopermeetups.com/" target="_blank" style="width: 100px;">
+  <img src="<%- url_for("/images/frontend-meetups.png") %>" style="width: 100px;">
+</a>
 <br>
 
 <a class="become-sponsor button white" href="<%- url_for("/support-vuejs/") %>">成为赞助者！</a>
