Updated how-to-contribute guide.

--- a/themes/vue/layout/partials/main_menu.ejs
+++ b/themes/vue/layout/partials/main_menu.ejs
@@ -11,4 +11,4 @@
 <li>
   <a href="https://vue.threadless.com" target="_blank" class="nav-link shop">商店</a>
 </li>
-<li><a href="<%- url_for("/about/") %>" class="nav-link<%- page.path.match(/about/) ? ' current' : '' %>">参与贡献</a></li>
+<li><a href="https://github.com/vuejs/cn.vuejs.org/" target="_blank" class="nav-link">参与贡献</a></li>
