Adjusted how-to-contribute link.

--- a/themes/vue/layout/partials/main_menu.ejs
+++ b/themes/vue/layout/partials/main_menu.ejs
@@ -10,4 +10,4 @@
 </li>
 <%- partial('partials/support_vue_dropdown') %>
 <%- partial('partials/language_dropdown') %>
-<li><a href="https://github.com/vuejs/cn.vuejs.org/" target="_blank" class="nav-link">参与贡献</a></li>
+<li><a href="https://github.com/vuejs/cn.vuejs.org/" target="_blank" class="nav-link contribute">参与翻译</a></li>
