--- a/themes/vue/source/css/_header.styl
+++ b/themes/vue/source/css/_header.styl
@@ -35,7 +35,7 @@ body.docs
   padding-bottom: 3px
   &:hover, &.current
     border-bottom: 3px solid $green
-  &.team
+  &.team, &.contribute
     margin-left: 10px
 
 .nav-dropdown
