--- a/themes/vue/layout/index.ejs
+++ b/themes/vue/layout/index.ejs
@@ -38,7 +38,7 @@
     <div class="point">
       <h2>性能</h2>
       <p>
-        20kb min+gzip 运行大小<br>
+        20kB min+gzip 运行大小<br>
         超快虚拟 DOM <br>
         最省心的优化
       </p>
