--- a/themes/vue/layout/partials/ecosystem_dropdown.ejs
+++ b/themes/vue/layout/partials/ecosystem_dropdown.ejs
@@ -1,6 +1,7 @@
 <li class="nav-dropdown-container ecosystem">
   <a class="nav-link">生态系统</a><span class="arrow"></span>
   <ul class="nav-dropdown">
+    <li><a href="https://github.com/vuejs/roadmap" class="nav-link" target="_blank">Roadmap</a></li>
     <li><h4>帮助</h4></li>
     <li><ul>
       <li><a href="https://forum.vuejs.org/" class="nav-link" target="_blank">论坛</a></li>
