--- a/themes/vue/layout/partials/support_vue_dropdown.ejs
+++ b/themes/vue/layout/partials/support_vue_dropdown.ejs
@@ -3,7 +3,7 @@
   <ul class="nav-dropdown">
     <li><ul>
       <li><a href="https://vue.threadless.com" target="_blank" class="nav-link">商店</a></li>
-      <li><a href="https://stickeroverflow.org/blog/vue-donation/" target="_blank" class="nav-link">在 StickerOverflow 支持我们</a></li>
+      <li><a href="https://stickeroverflow.org/blog/vue-donation/" target="_blank" class="nav-link">贴纸</a></li>
       <li><a href="https://opencollective.com/vuejs" target="_blank" class="nav-link">在 OpenCollective 支持我们</a></li>
       <li><a href="https://www.patreon.com/evanyou" target="_blank" class="nav-link">在 Patreon 支持 Evan</a></li>
     </ul></li>
