chore: update ad image

--- a/themes/vue/layout/partials/ad.ejs
+++ b/themes/vue/layout/partials/ad.ejs
@@ -1,5 +1,5 @@
 <div id="ad">
   <a href="https://time.geekbang.org/?utm_source=website&utm_medium=vue&utm_campaign=routine&utm_content=tuijian" target="_blank" rel="nofollow">
-    <img src="/images/geekbang.jpg" alt="极客时间">
+    <img src="/images/geekbang2.jpg" alt="极客时间">
   </a>
 </div>
