--- a/themes/vue/source/css/page.styl
+++ b/themes/vue/source/css/page.styl
@@ -53,7 +53,7 @@
     margin: 0 0 1em
   h2, h3
     pointer-events: none
-    a
+    a, button
       pointer-events: auto
       color: $dark
     &:before
