--- a/themes/vue/layout/index.ejs
+++ b/themes/vue/layout/index.ejs
@@ -82,7 +82,7 @@
 </div>
 
 <div id="video-modal" class="modal">
-  <div class="vimeo-space" style="padding: 56.25% 0 0 0; position: relative;"></div>
+  <div class="video-space" style="padding: 56.25% 0 0 0; position: relative;"></div>
 </div>
 
 <script>
