--- a/themes/vue/layout/partials/sidebar.ejs
+++ b/themes/vue/layout/partials/sidebar.ejs
@@ -4,38 +4,7 @@
       <%- partial('partials/main_menu', { context: 'sidebar' }) %>
     </ul>
     <div class="list">
-      <div class="main-sponsor">
-        <span>赞助者</span><br>
-        <a id="main-sponsor-link" target="_blank" style="display: block; margin: 6px 0;">
-          <img id="main-sponsor-image" style="border-radius: 3px;">
-        </a>
-        <script>
-        (function () {
-          var API = 'https://xiaozhuanlan.com/example/baner_settings'
-          var req = new XMLHttpRequest()
-          var data = {
-            "link_url": "https://xiaozhuanlan.com",
-            "img_url": "https://diycode.b0.upaiyun.com/photo/2017/15ebaae7745e70876cf20c0ee93bdc9e.png"
-          }
-          req.onreadystatechange = function () {
-            if (req.readyState == 4) {
-            if (req.status >= 200 && req.status < 300) {
-              try {
-                data = JSON.parse(req.responseText)
-              } catch (e) {}
-            }
-            document.getElementById('main-sponsor-link').href = data.link_url
-            document.getElementById('main-sponsor-image').src = data.img_url
-            }
-          }
-          req.open('GET', API)
-          req.send()
-        })()
-        </script>
-      </div>
-      <a class="become-backer" href="<%- url_for("/support-vuejs") %>">
-        成为赞助者
-      </a>
+      <%- partial('partials/sponsors_sidebar') %>
       <h2>
         <% titles = {
           api: 'API',
