updated code & images

--- a/themes/vue/layout/index.ejs
+++ b/themes/vue/layout/index.ejs
@@ -19,7 +19,7 @@
         <a id="modal-player" class="button has-icon" href="javascript:;">
           <%- partial('icons/play') %>
           WHY VUE.JS?</a>
-        <a class="button" href="<%- url_for("/v2/guide/") %>">起步</a>
+        <a class="button white" href="<%- url_for("/v2/guide/") %>">起步</a>
         <a class="button gray has-icon" href="https://github.com/vuejs/vue" target="_blank">
           <%- partial('icons/github-dark') %>
           GITHUB</a>
