--- a/themes/vue/layout/partials/sidebar.ejs
+++ b/themes/vue/layout/partials/sidebar.ejs
@@ -5,22 +5,27 @@
     </ul>
     <div class="list">
       <%- partial('partials/sponsors_sidebar') %>
-      <h2>
-        <% titles = {
-          api: 'API',
-          examples: '示例',
-          guide: '教程',
-          'style-guide': '风格指南<sup class="beta">beta</sup>'
-        } %>
-        <%- titles[type] %>
-        <% if (['cookbook', 'style-guide'].indexOf(type) === -1) { %>
-          <select class="version-select">
-            <option value="SELF" selected>2.x</option>
-            <option value="v1">1.0</option>
-          </select>
-        <% } %>
-      </h2>
-      <%- partial('partials/toc', { type: type }) %>
+      <% if (type !== 'search') { %>
+        <h2>
+          <% titles = {
+            api: 'API',
+            examples: '示例',
+            guide: '教程',
+            cookbook: 'Cookbook<sup class="beta">beta</sup>',
+            'style-guide': '风格指南'
+          } %>
+          <%- titles[type] %>
+          <% if (['cookbook', 'style-guide'].indexOf(type) === -1) { %>
+            <select class="version-select">
+              <option value="SELF" selected>2.x</option>
+              <option value="v1">1.0</option>
+              <option value="012">0.12</option>
+              <option value="011">0.11</option>
+            </select>
+          <% } %>
+        </h2>
+        <%- partial('partials/toc', { type: type }) %>
+      <% } %>
     </div>
   </div>
 </div>
