--- a/themes/vue/layout/partials/toc.ejs
+++ b/themes/vue/layout/partials/toc.ejs
@@ -5,6 +5,9 @@
       <% if (fileName === 'installation') { %>
         <li><h3>基础</h3></li>
       <% } %>
+      <% if (fileName === 'components-registration') { %>
+        <li><h3>深入了解组件</h3></li>
+      <% } %>
       <% if (fileName === 'transitions') { %>
         <li><h3>过渡 & 动画</h3></li>
       <% } %>
