--- a/themes/vue/layout/partials/sponsors.ejs
+++ b/themes/vue/layout/partials/sponsors.ejs
@@ -56,7 +56,7 @@ window.addEventListener('load', function () {
 <br>
 <br>
 
-<h3>中国区视频赞助商</h3>
+<h3>中国区视频托管赞助商</h3>
 <%_ for (const sponsor of theme.video_sponsors_china) {_%>
 <a href="<%- sponsor.url %>" target="_blank" style="width: 120px;">
   <img src="<%- url_for(`/images/${sponsor.img}`) %>" style="width: 120px;">
