--- a/themes/vue/layout/sponsors-page.ejs
+++ b/themes/vue/layout/sponsors-page.ejs
@@ -139,7 +139,7 @@ window.addEventListener('hashchange', function () {
 <%_ } _%>
 </p>
 
-<h3>中国区视频赞助商</h3>
+<h3>中国区视频托管赞助商</h3>
 
 <p class="sponsor-section">
 <%_ for (const sponsor of theme.video_sponsors_china) {_%>
