chore: fix sponsor links

--- a/themes/vue/layout/partials/sponsors_sidebar.ejs
+++ b/themes/vue/layout/partials/sponsors_sidebar.ejs
@@ -1,7 +1,7 @@
 <div class="sidebar-sponsors">
   <div class="main-sponsor">
     <span>特别赞助</span><br>
-    <a id="main-sponsor-link" target="_blank" style="display: block; margin: 15px 0;" href="https://www.bmqb.com/jobs">
+    <a id="main-sponsor-link" target="_blank" style="display: block; margin: 15px 0;" href="https://www.bmqb.com/a/jobs?tracking_code=vue">
       <img id="main-sponsor-image" src="<%- url_for(`/images/bmqb.png`) %>">
     </a>
   </div>
