chore: update ad

--- a/themes/vue/layout/partials/ad.ejs
+++ b/themes/vue/layout/partials/ad.ejs
@@ -1,5 +1,5 @@
 <div id="ad">
-  <a href="https://time.geekbang.org/column/intro/74?utm_source=website&utm_medium=vue&utm_campaign=201803wudao&utm_content=wudaobanner" target="_blank" rel="nofollow">
-    <img src="/images/geekbang4.gif" alt="极客时间">
+  <a href="https://time.geekbang.org/column/intro/81?utm_source=website&utm_medium=vue&utm_campaign=81-onsell&utm_content=201805banner" target="_blank" rel="nofollow">
+    <img src="/images/geekbang5.gif" alt="极客时间">
   </a>
 </div>
