adjust sponsor naming on pages

--- a/themes/vue/layout/partials/sponsors_sidebar.ejs
+++ b/themes/vue/layout/partials/sponsors_sidebar.ejs
@@ -16,7 +16,7 @@ original version from vuejs.org
 
 <div id="sidebar-sponsors-special">
   <div class="main-sponsor">
-    <span>特别赞助</span>
+    <span>特别赞助商</span>
     <div>
     <%_ for (const sponsor of theme.special_sponsors) {_%>
     <a href="<%- sponsor.url %>" target="_blank" class="logo">
@@ -29,7 +29,7 @@ original version from vuejs.org
 
 <div id="sidebar-sponsors-platinum">
   <div class="main-sponsor">
-    <span>Patreon 赞助</span>
+    <span>铂金赞助商</span>
     <div>
     <%_ for (const sponsor of theme.platinum_sponsors) {_%>
     <a href="<%- sponsor.url %>" target="_blank" class="logo">
