chore: update sponsor info

--- a/themes/vue/layout/partials/sponsors_sidebar.ejs
+++ b/themes/vue/layout/partials/sponsors_sidebar.ejs
@@ -1,11 +1,6 @@
 <div class="sidebar-sponsors">
-  <div class="main-sponsor">
-    <span>特别赞助</span><br>
-    <a id="main-sponsor-link" target="_blank" style="display: block; margin: 15px 0;" href="https://www.bmqb.com/a/jobs?tracking_code=vue">
-      <img id="main-sponsor-image" src="<%- url_for(`/images/bmqb.png`) %>">
-    </a>
-  </div>
-  <a class="become-backer" href="<%- url_for("/support-vuejs") %>">
+  <a class="become-backer" href="<%- url_for("/support-vuejs#Special-Sponsor") %>">
+    特别赞助位空缺中<br>
     成为赞助者
   </a>
 </div>
