--- a/themes/vue/layout/sponsors-page.ejs
+++ b/themes/vue/layout/sponsors-page.ejs
@@ -69,13 +69,22 @@ window.addEventListener('hashchange', function () {
   </li>
 </ul>
 
-<h2>额外的赞助方式</h2>
+<h2 id="Special-Sponsor">中文区特别赞助（空缺中）</h2>
+
+<p>中文区特别赞助商仅有两个名额。赞助商的 logo 或广告会出现在：</p>
 
 <ul>
-  <li>
-    <a href="https://stickeroverflow.org/blog/vue-donation/" target="_blank">通过 StickerOverflow 赞助</a> (每购买一张 Vue 贴纸，会为 Vue 赞助 1 元人民币)
-  </li>
+  <li>中文站文档的每一页</li>
+  <li>中文文档站首页</li>
+  <li>Vue.js GitHub 仓库的 README 中</li>
 </ul>
+
+<p>目前左上角赞助位（如下图所示）正空缺中。Vue 的中文文档有400万+的月 PV 和将近40万的月活跃用户，并且能够精准地定位前端开发者群体。有兴趣的赞助商请通过 <a href="mailto:vuejs.org@gmail.com">vuejs.org@gmail.com</a> 联系我们。
+</p>
+
+<p>
+  <img src="/images/special-sponsor-spot.png">
+</p>
 
 <h2>当前的顶级赞助商</h2>
 
