--- a/themes/vue/layout/partials/sponsors_sidebar.ejs
+++ b/themes/vue/layout/partials/sponsors_sidebar.ejs
@@ -1,6 +1,8 @@
 <div class="sidebar-sponsors">
+  <div class="main-sponsor">
+    <span style="display: block; margin-bottom: 15px">特别赞助位空缺中</span>
+  </div>
   <a class="become-backer" href="<%- url_for("/support-vuejs#Special-Sponsor") %>">
-    特别赞助位空缺中<br>
     成为赞助者
   </a>
 </div>
