add style hook for video sponsor

--- a/themes/vue/layout/sponsors-page.ejs
+++ b/themes/vue/layout/sponsors-page.ejs
@@ -164,7 +164,7 @@ window.addEventListener('hashchange', function () {
 
 <h3>中国区视频托管赞助商</h3>
 
-<p class="sponsor-section">
+<p class="video-sponsors-china sponsor-section">
 <%_ for (const sponsor of theme.video_sponsors_china) {_%>
   <a href="<%- sponsor.url %>" target="_blank">
     <img src="<%- url_for(`/images/${sponsor.img}`) %>">
