refine styles for video sponsors

--- a/themes/vue/source/css/_sponsors-page.styl
+++ b/themes/vue/source/css/_sponsors-page.styl
@@ -27,6 +27,13 @@
       max-height 60px
       margin-right 30px
       margin-bottom 20px
+      
+  .video-sponsors-china
+    a
+      display inline-block
+      margin 20px
+    img
+      width 250px
 
 #one-time-donations
   a, svg
