--- a/themes/vue/layout/sponsors-page.ejs
+++ b/themes/vue/layout/sponsors-page.ejs
@@ -73,7 +73,7 @@ window.addEventListener('hashchange', function () {
   </li>
 </ul>
 
-<h2 id="Special-Sponsor">中文区特别赞助（空缺中）</h2>
+<!-- <h2 id="Special-Sponsor">中文区特别赞助（空缺中）</h2>
 
 <p>中文区特别赞助商仅有两个名额。赞助商的 logo 或广告会出现在：</p>
 
@@ -89,6 +89,7 @@ window.addEventListener('hashchange', function () {
 <p>
   <img src="/images/special-sponsor-spot.png">
 </p>
+-->
 
 <h2>当前的顶级赞助商</h2>
 
