Accessibility fix on newsletter form input (#1828)
Fixes the issue: "Form elements do not have associated labels". Labels ensure that form controls are announced properly by assistive technologies, like screen readers.
https://dequeuniversity.com/rules/axe/2.2/label?application=lighthouse

--- a/themes/vue/layout/index.ejs
+++ b/themes/vue/layout/index.ejs
@@ -69,7 +69,7 @@
 
 <div id="news">
   <div class="inner">
-    <h3>订阅我们的周刊 (英文)</h3>
+    <h3><label for="member_email">订阅我们的周刊 (英文)</label></h3>
     <form
       class="newsletter-form"
       id="revue-form"
