--- a/themes/vue/layout/partials/sponsors.ejs
+++ b/themes/vue/layout/partials/sponsors.ejs
@@ -1,3 +1,4 @@
+<%_ if (theme.platinum_sponsors_china.length) { _%>
 <h3>中国区特别赞助商</h3>
 <%_ for (const sponsor of theme.platinum_sponsors_china) {_%>
 <a href="<%- sponsor.url %>" target="_blank" style="width: 160px;">
@@ -7,6 +8,8 @@
 <br>
 <br>
 <br>
+<%_ } _%>
+
 <h3>Patreon 赞助商</h3>
 
 <%_ for (const sponsor of theme.platinum_sponsors) {_%>
