--- a/themes/vue/layout/sponsors-page.ejs
+++ b/themes/vue/layout/sponsors-page.ejs
@@ -72,24 +72,6 @@ window.addEventListener('hashchange', function () {
   </li>
 </ul>
 
-<!-- <h2 id="Special-Sponsor">中文区特别赞助（空缺中）</h2>
-
-<p>中文区特别赞助商仅有两个名额。赞助商的 logo 或广告会出现在：</p>
-
-<ul>
-  <li>中文站文档的每一页</li>
-  <li>中文文档站首页</li>
-  <li>Vue.js GitHub 仓库的 README 中</li>
-</ul>
-
-<p>目前左上角赞助位（如下图所示）正空缺中。Vue 的中文文档有400万+的月 PV 和将近40万的月活跃用户，并且能够精准地定位前端开发者群体。有兴趣的赞助商请通过 <a href="mailto:vuejs.org@gmail.com">vuejs.org@gmail.com</a> 联系我们。
-</p>
-
-<p>
-  <img src="/images/special-sponsor-spot.png">
-</p>
--->
-
 <h2>当前的顶级赞助商</h2>
 
 <h3>特别赞助商</h3>
@@ -102,7 +84,9 @@ window.addEventListener('hashchange', function () {
 <%_ } _%>
 </p>
 
-<h3>特别赞助商 (中国区)</h3>
+<h3 id="special-sponsor-china">特别赞助商 (中国区)</h3>
+
+<%_ if (theme.platinum_sponsors_china.length) { _%>
 
 <p class="platinum">
 <%_ for (const sponsor of theme.platinum_sponsors_china) {_%>
@@ -111,6 +95,22 @@ window.addEventListener('hashchange', function () {
   </a>
 <%_ } _%>
 </p>
+
+<%_ } else { _%>
+
+<p>中文区特别赞助商仅有两个名额。赞助商的 logo 或广告会出现在：</p>
+
+<ul>
+  <li>本页面</li>
+  <li>中文站文档的每一页（左上角或右下角）</li>
+  <li>中文文档站首页</li>
+  <li>Vue.js GitHub 仓库的 README 中</li>
+</ul>
+
+<p>Vue 的中文文档有400万+的月 PV 和40万+的月活跃用户，并且能够精准地定位开发者群体。有兴趣的赞助商请通过 <a href="mailto:vuejs.org@gmail.com">vuejs.org@gmail.com</a> 联系我们。
+</p>
+
+<%_ } _%>
 
 <h3>Patreon 白金赞助商</h3>
 
