chore: update ad

--- a/themes/vue/layout/partials/ad.ejs
+++ b/themes/vue/layout/partials/ad.ejs
@@ -1,8 +1,11 @@
 <div id="ad">
-  <script
+  <!-- <script
     async
     type="text/javascript"
     src="//cdn.carbonads.com/carbon.js?serve=CKYIK2QU&placement=vuejsorg"
     id="_carbonads_js">
-  </script>
+  </script> -->
+  <a href="https://studio.qcloud.coding.net/campaign/favorite-plugins/?utm_source=vue.js&utm_content=ad1116" target="_blank">
+    <img src="/images/coding-net-ad.jpg">
+  </a>
 </div>
