--- a/themes/vue/source/css/_ad.styl
+++ b/themes/vue/source/css/_ad.styl
@@ -1,6 +1,8 @@
 // main ad placement (bottom right)
+$ad-width = 150px
+
 #ad
-  width: 125px
+  width: $ad-width
   // text-align: center
   position: fixed
   z-index: 99
@@ -19,7 +21,7 @@
     display: inline-block
     margin-bottom: 5px
   img
-    width: 125px
+    width: $ad-width
   .carbon-img, .carbon-text
     display: block
     margin-bottom: 6px
