chore: adjust special sponsor setup

--- a/themes/vue/layout/sponsors-page.ejs
+++ b/themes/vue/layout/sponsors-page.ejs
@@ -96,7 +96,8 @@ window.addEventListener('hashchange', function () {
 <%_ } _%>
 </p>
 
-<%_ } else { _%>
+<%_ } _%>
+<%_ if (theme.platinum_sponsors_china.length < 2) { _%>
 
 <p>中文区特别赞助商仅有两个名额。赞助商的 logo 或广告会出现在：</p>
 
