--- a/themes/vue/source/css/_sponsors-index.styl
+++ b/themes/vue/source/css/_sponsors-index.styl
@@ -48,3 +48,16 @@
     img
       filter: none
       opacity: 1
+
+#special-sponsor
+  .become-backer
+    color: $green
+    border: 1px solid $green
+    border-radius: 2em
+    display: inline-block
+    color: $green
+    font-size: .8em
+    width: 125px
+    padding: 4px 0
+    text-align: center
+    margin: 20px 0 0
