--- a/themes/vue/layout/index.ejs
+++ b/themes/vue/layout/index.ejs
@@ -30,12 +30,17 @@
 
 <div id="special-sponsor">
   <h3>特别赞助</h3>
-  <% var specialSponsor = theme.special_sponsors[0]; %>
-  <a href="<%- specialSponsor.url %>" target="_blank">
-    <img src="<%- url_for(`/images/${specialSponsor.img}`) %>" style="width:160px" alt="Code.xyz Logo">
-    <br>
-    <span><%- specialSponsor.description %></span>
+  <%_ for (const sponsor of theme.platinum_sponsors_china) { _%>
+  <a href="<%- sponsor.url %>" target="_blank">
+    <img src="<%- url_for(`/images/${sponsor.img}`) %>" style="width:160px">
   </a>
+  <%_ } _%>
+  <%_if (theme.platinum_sponsors_china.length < 2) { _%>
+  <br>
+  <a class="become-backer" href="/support-vuejs/#special-sponsor-china">
+    成为特别赞助商
+  </a>
+  <%_} _%>
 </div>
 
 <div id="highlights">
