chore: update sponsor email link

--- a/themes/vue/layout/sponsors-page.ejs
+++ b/themes/vue/layout/sponsors-page.ejs
@@ -108,7 +108,7 @@ window.addEventListener('hashchange', function () {
   <li>Vue.js GitHub 仓库的 README 中</li>
 </ul>
 
-<p>Vue 的中文文档有400万+的月 PV 和40万+的月活跃用户，并且能够精准地定位开发者群体。有兴趣的赞助商请通过 <a href="mailto:vuejs.org@gmail.com">vuejs.org@gmail.com</a> 联系我们。
+<p>Vue 的中文文档有400万+的月 PV 和40万+的月活跃用户，并且能够精准地定位开发者群体。有兴趣的赞助商请通过 <a href="mailto:sponsor@vuejs.org">sponsor@vuejs.org</a> 联系我们。
 </p>
 
 <%_ } _%>
