chore: update sponsor

--- a/themes/vue/layout/partials/ad.ejs
+++ b/themes/vue/layout/partials/ad.ejs
@@ -5,7 +5,10 @@
     src="//cdn.carbonads.com/carbon.js?serve=CKYIK2QU&placement=vuejsorg"
     id="_carbonads_js">
   </script> -->
-  <a href="https://studio.qcloud.coding.net/campaign/favorite-plugins/?utm_source=vue.js&utm_content=ad1116" target="_blank">
-    <img src="/images/coding-net-ad.jpg">
+  <a href="https://e.coding.net/?utm_source=vue.js" target="_blank">
+    <img src="/images/coding.png">
+    <p>
+      企业级一站式软件研发协作平台
+    </p>
   </a>
 </div>
