Feature/add new events links (#1993)
* refactor: Swap in new meetup link

* feature: Add Events link

--- a/themes/vue/layout/partials/ecosystem_dropdown.ejs
+++ b/themes/vue/layout/partials/ecosystem_dropdown.ejs
@@ -5,7 +5,7 @@
     <li><ul>
       <li><a href="https://forum.vuejs.org/" class="nav-link" target="_blank">论坛</a></li>
       <li><a href="https://chat.vuejs.org/" class="nav-link" target="_blank">聊天室</a></li>
-      <li><a href="https://www.vuemeetups.org/" class="nav-link" target="_blank">聚会</a></li>
+      <li><a href="https://events.vuejs.org/meetups/" class="nav-link" target="_blank">聚会</a></li>
     </ul></li>
     <li><h4>工具</h4></li>
     <li>
@@ -25,6 +25,7 @@
     <li><ul>
       <li><a href="https://news.vuejs.org" class="nav-link" target="_blank">周刊</a></li>
       <li><a href="https://github.com/vuejs/vue/projects/6" class="nav-link" target="_blank">Roadmap</a></li>
+      <li><a href="https://events.vuejs.org/" class="nav-link" target="_blank">活动</a></li>
       <li><a href="https://twitter.com/vuejs" class="nav-link" target="_blank">Twitter</a></li>
       <li><a href="https://medium.com/the-vue-point" class="nav-link" target="_blank">博客</a></li>
       <li><a href="https://vuejobs.com/?ref=vuejs" class="nav-link" target="_blank">工作</a></li>
