chore: update ad

--- a/themes/vue/layout/partials/ad.ejs
+++ b/themes/vue/layout/partials/ad.ejs
@@ -1,8 +1,11 @@
 <div id="ad">
-  <script
+  <a href="https://time.geekbang.org/course/intro/163?code=Cs1WwK3tTrzMwGm1q-0VySZ9DhJaB-pOIkESucJlfHc%3D&utm_term=SPoster" target="_blank" rel="noopener">
+    <img src="/images/geekbang-vue-ad.gif">
+  </a>
+  <!-- <script
     async
     type="text/javascript"
     src="//cdn.carbonads.com/carbon.js?serve=CKYIK2QU&placement=vuejsorg"
     id="_carbonads_js">
-  </script>
+  </script> -->
 </div>
