--- a/themes/vue/layout/partials/ad.ejs
+++ b/themes/vue/layout/partials/ad.ejs
@@ -1,4 +1,5 @@
 <div id="ad">
+  <span style="float: right;">广告</span>
   <a href="https://time.geekbang.org/course/intro/163?code=Cs1WwK3tTrzMwGm1q-0VySZ9DhJaB-pOIkESucJlfHc%3D&utm_term=SPoster" target="_blank" rel="noopener">
     <img src="/images/geekbang-ad.jpg">
   </a>
